add comments to check Encoding

--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -495,6 +495,7 @@
     }
    ],
    "source": [
+    "# Display the first five dictionary entries to check the structure of data before vectorization\n",
     "train_dicts[:5]"
    ]
   },
@@ -519,6 +520,7 @@
     }
    ],
    "source": [
+    "# Display the first row from the dataframe to see what it looks like before transformation\n",
     "df[categorical + numerical].iloc[0]"
    ]
   },
@@ -540,8 +542,10 @@
     }
    ],
    "source": [
+    "# Convert the first row of the training dataset into a dense format for easier analysis\n",
     "first_row = X_train[0,:].toarray()\n",
     "\n",
+    "# Identify the indices of non-zero elements in the first row to see which features are included\n",
     "nonzero_indices = np.nonzero(first_row)[1]\n",
     "nonzero_indices"
    ]
@@ -565,7 +569,10 @@
     }
    ],
    "source": [
+    "# Retrieve the list of all feature names after the DictVectorizer transformation\n",
     "feature_names = dv.get_feature_names_out()\n",
+    "\n",
+    "# Display specific features corresponding to the non-zero indices of the first row\n",
     "feature_names[[43, 325, 515]]"
    ]
   },
