--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -1068,11 +1068,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4bc9a2da",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Results:\n",
+    "\n",
+    "OHE (['PULocationID', 'DOLocationID'])  \n",
+    "\n",
+    "Lasso:  \n",
+    "- 0.01: 8.137  \n",
+    "\n",
+    "Ridge:  \n",
+    "- 0.01: 7.849  \n",
+    "\n",
+    "LinearRegression:  \n",
+    "- default: 7.81  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "OHE (['PU_DO'] = df_train['PULocationID'] + '_' + df_train['DOLocationID'])  \n",
+    "\n",
+    "Lasso:  \n",
+    "- 0.01: 9.395  \n",
+    "\n",
+    "Ridge:  \n",
+    "- 0.01: 5.766  \n",
+    "\n",
+    "LinearRegression:  \n",
+    "- default: 5.198 <= the BEST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4cc8ca0",
+   "metadata": {},
    "source": []
   }
  ],
