--- a/02-experiment-tracking/hw02-experiment-tracking.ipynb
+++ b/02-experiment-tracking/hw02-experiment-tracking.ipynb
@@ -700,59 +700,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/05/24 09:08:48 INFO mlflow.tracking.fluent: Experiment with name 'rf-best-models' does not exist. Creating a new experiment.\n",
-      "Starting experiment rf-best-models\n",
-      "2024/05/24 09:08:52 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'numpy.ndarray' object has no attribute 'toarray'\n",
-      "2024/05/24 09:09:03 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/_distutils_hack/__init__.py:26: UserWarning: Setuptools is replacing distutils.\"\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "Experiment finished\n",
-      "Starting experiment rf-best-models\n",
-      "2024/05/24 09:09:21 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'numpy.ndarray' object has no attribute 'toarray'\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "Experiment finished\n",
-      "Starting experiment rf-best-models\n",
-      "2024/05/24 09:09:49 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'numpy.ndarray' object has no attribute 'toarray'\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "Experiment finished\n",
-      "Starting experiment rf-best-models\n",
-      "2024/05/24 09:10:09 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'numpy.ndarray' object has no attribute 'toarray'\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "Experiment finished\n",
-      "Starting experiment rf-best-models\n",
-      "2024/05/24 09:10:30 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'numpy.ndarray' object has no attribute 'toarray'\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/home/aleksandr/anaconda3/envs/exp-track-env/lib/python3.9/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "Experiment finished\n",
-      "Successfully registered model 'rf-best-model'.\n",
-      "Created version '1' of model 'rf-best-model'.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Run run_register_model function from register_model module, emulating command-line execution\n",
-    "result = runner.invoke(register_model.run_register_model)\n",
+    "# Run run_register_m\n",
+    "result = runner.invo\n",
     "\n",
     "# Print result\n",
     "print(result.output)"
