Upgrade hw02-experiment-tracking.ipynb

--- a/02-experiment-tracking/hw02-experiment-tracking.ipynb
+++ b/02-experiment-tracking/hw02-experiment-tracking.ipynb
@@ -345,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !mkdir -p ./artifacts"
+    "!mkdir -p ./artifacts"
    ]
   },
   {
@@ -377,11 +377,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-27 17:09:55 +0300] [6808] [INFO] Starting gunicorn 22.0.0\n",
+      "[2024-05-27 17:09:55 +0300] [6808] [INFO] Listening at: http://127.0.0.1:5000 (6808)\n",
+      "[2024-05-27 17:09:55 +0300] [6808] [INFO] Using worker: sync\n",
+      "[2024-05-27 17:09:55 +0300] [6809] [INFO] Booting worker with pid: 6809\n",
+      "[2024-05-27 17:09:55 +0300] [6810] [INFO] Booting worker with pid: 6810\n",
+      "[2024-05-27 17:09:55 +0300] [6811] [INFO] Booting worker with pid: 6811\n",
+      "[2024-05-27 17:09:55 +0300] [6812] [INFO] Booting worker with pid: 6812\n",
+      "^C\n",
+      "[2024-05-27 17:10:50 +0300] [6808] [INFO] Handling signal: int\n",
+      "[2024-05-27 17:10:50 +0300] [6810] [INFO] Worker exiting (pid: 6810)\n",
+      "[2024-05-27 17:10:50 +0300] [6811] [INFO] Worker exiting (pid: 6811)\n",
+      "[2024-05-27 17:10:50 +0300] [6809] [INFO] Worker exiting (pid: 6809)\n"
+     ]
+    }
+   ],
    "source": [
-    "# !mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root ./artifacts"
+    "!mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root ./artifacts"
    ]
   },
   {
