--- a/01-intro/duration-prediction_codespaces_version.ipynb
+++ b/01-intro/duration-prediction_codespaces_version.ipynb
@@ -53,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
+    "import pickle\n",
+    "import gc"
    ]
   },
   {
@@ -335,8 +336,6 @@
    "outputs": [],
    "source": [
     "categorical = ['PULocationID', 'DOLocationID']\n",
-    "numerical = ['trip_distance']\n",
-    "\n",
     "df[categorical] = df[categorical].astype(str)"
    ]
   },
@@ -437,14 +436,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07c70bb",
-   "metadata": {},
-   "source": [
-    "## ***Answer for Q4:==*** 515"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "959b5850",
    "metadata": {},
    "source": [
@@ -458,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "train_dicts = df[categorical].to_dict(orient='records')\n",
     "\n",
     "dv = DictVectorizer()\n",
     "X_train = dv.fit_transform(train_dicts)"
@@ -483,6 +474,14 @@
    ],
    "source": [
     "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07c70bb",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q4:==*** 515"
    ]
   },
   {
@@ -539,7 +538,7 @@
     }
    ],
    "source": [
-    "df[categorical + numerical].iloc[0]"
+    "df[categorical].iloc[0]"
    ]
   },
   {
@@ -586,7 +585,7 @@
    ],
    "source": [
     "feature_names = dv.get_feature_names_out()\n",
-    "feature_names[[43, 325, 515]]"
+    "feature_names[[43, 325]]"
    ]
   },
   {
@@ -694,6 +693,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84454394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "49ad8832",
    "metadata": {},
@@ -726,13 +735,7 @@
    "outputs": [],
    "source": [
     "def read_dataframe(filename):\n",
-    "    if filename.endswith('.csv'):\n",
-    "        df = pd.read_csv(filename)\n",
-    "\n",
-    "        df.lpep_dropoff_datetime = pd.to_datetime(df.lpep_dropoff_datetime)\n",
-    "        df.lpep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n",
-    "    elif filename.endswith('.parquet'):\n",
-    "        df = pd.read_parquet(filename)\n",
+    "    df = pd.read_parquet(filename)\n",
     "\n",
     "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
     "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
@@ -741,7 +744,7 @@
     "\n",
     "    categorical = ['PULocationID', 'DOLocationID']\n",
     "    df[categorical] = df[categorical].astype(str)\n",
-    "    \n",
+    "\n",
     "    return df"
    ]
   },
@@ -785,14 +788,13 @@
    "outputs": [],
    "source": [
     "categorical = ['PULocationID', 'DOLocationID']\n",
-    "numerical = ['trip_distance']\n",
     "\n",
     "dv = DictVectorizer()\n",
     "\n",
-    "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "train_dicts = df_train[categorical].to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dicts)\n",
     "\n",
-    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "val_dicts = df_val[categorical].to_dict(orient='records')\n",
     "X_val = dv.transform(val_dicts)"
    ]
   },
@@ -878,7 +880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/lin_reg_gh_cs.bin', 'wb') as f_out:\n",
+    "with open('models/lin_reg_github_codespace.bin', 'wb') as f_out:\n",
     "    pickle.dump((dv, lr), f_out)"
    ]
   },
@@ -976,10 +978,10 @@
     "\n",
     "dv = DictVectorizer()\n",
     "\n",
-    "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "train_dicts = df_train[categorical].to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dicts)\n",
     "\n",
-    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "val_dicts = df_val[categorical].to_dict(orient='records')\n",
     "X_val = dv.transform(val_dicts)"
    ]
   },
