fix minor mistake in hw01

--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -1085,26 +1085,26 @@
     "OHE (['PULocationID', 'DOLocationID'])  \n",
     "\n",
     "Lasso:  \n",
-    "- 0.01: 8.137  \n",
+    "- 0.01: 8.138  \n",
     "\n",
     "Ridge:  \n",
-    "- 0.01: 7.849  \n",
+    "- 0.01: 7.811  \n",
     "\n",
     "LinearRegression:  \n",
-    "- default: 7.81  \n",
+    "- default: 7.811  \n",
     "\n",
     "---\n",
     "\n",
     "OHE (['PU_DO'] = df_train['PULocationID'] + '_' + df_train['DOLocationID'])  \n",
     "\n",
     "Lasso:  \n",
-    "- 0.01: 9.395  \n",
+    "- 0.01: 9.396  \n",
     "\n",
     "Ridge:  \n",
-    "- 0.01: 5.766  \n",
+    "- 0.01: 5.197  <= the BEST  \n",
     "\n",
     "LinearRegression:  \n",
-    "- default: 5.198 <= the BEST"
+    "- default: 5.198 "
    ]
   },
   {
