add solution for Q2-Q3

--- a/06-best-practices/hw06.ipynb
+++ b/06-best-practices/hw06.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -41,7 +51,7 @@
     "this looks like? \n",
     "\n",
     "\n",
-    "Hint: after refactoring, check that the code still works. Just run it e.g. for March 2023 and see if it finishes successfully. \n",
+    "Hint: after refactoring, check that the code still works. Just run it e.g. for April 2023 and see if it finishes successfully. \n",
     "\n",
     "To make it easier to run it, you can write results to your local\n",
     "filesystem. E.g. here:\n",
@@ -179,24 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "итого 44424\n",
-      "drwxrwxr-x 2 aleksandr aleksandr     4096 июл  1 11:47 .\n",
-      "drwxrwxr-x 6 aleksandr aleksandr     4096 июл  1 11:41 ..\n",
-      "-rw-rw-r-- 1 aleksandr aleksandr 23129111 июл  1 11:16 yellow_tripdata_2023-03.parquet\n",
-      "-rw-rw-r-- 1 aleksandr aleksandr 22340573 июл  1 11:47 yellow_tripdata_2023-04.parquet\n"
+      ".  ..  yellow_tripdata_2023-04.parquet\n"
      ]
     }
    ],
    "source": [
     "# lets check existing output file\n",
-    "! ls ./output -la"
+    "! ls ./output -a"
    ]
   },
   {
@@ -231,17 +237,392 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## ***Answer for Q2:==*** \n"
+    "!mkdir -p tests"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***Answer for Q3:==*** 14.2"
+    "To be able to test batch.py, we need to make our test file capable of importing it. So, we need to create __init__.py file in tests folder. This file indicates to Python that directory is package and allows importing modules from this directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch tests/__init__.py tests/test_batch.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".  ..  __init__.py  test_batch.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls ./tests -a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q2:==*** ```__init__.py```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3. Writing first unit test\n",
+    "\n",
+    "Now let's cover our code with unit tests.\n",
+    "\n",
+    "We'll start with the pre-processing logic inside `read_data`.\n",
+    "\n",
+    "It's difficult to test right now because first reads\n",
+    "the file and then performs some transformations. We need to split this \n",
+    "code into two parts: reading (I/O) and transformation. \n",
+    "\n",
+    "So let's create a function `prepare_data` that takes in a dataframe \n",
+    "(and some other parameters too) and applies some transformation to it.\n",
+    "\n",
+    "(That's basically the entire `read_data` function after reading \n",
+    "the parquet file)\n",
+    "\n",
+    "Now create a test and use this as input:\n",
+    "\n",
+    "```python\n",
+    "data = [\n",
+    "    (None, None, dt(1, 1), dt(1, 10)),\n",
+    "    (1, 1, dt(1, 2), dt(1, 10)),\n",
+    "    (1, None, dt(1, 2, 0), dt(1, 2, 59)),\n",
+    "    (3, 4, dt(1, 2, 0), dt(2, 2, 1)),      \n",
+    "]\n",
+    "\n",
+    "columns = ['PULocationID', 'DOLocationID', 'tpep_pickup_datetime', 'tpep_dropoff_datetime']\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "```\n",
+    "\n",
+    "Where `dt` is a helper function:\n",
+    "\n",
+    "```python\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def dt(hour, minute, second=0):\n",
+    "    return datetime(2023, 1, 1, hour, minute, second)\n",
+    "```\n",
+    "\n",
+    "Define the expected output and use the assert to make sure \n",
+    "that the actual dataframe matches the expected one.\n",
+    "\n",
+    "Tip: When you compare two Pandas DataFrames, the result is also a DataFrame.\n",
+    "The same is true for Pandas Series. Also, a DataFrame could be turned into a list of dictionaries.  \n",
+    "\n",
+    "How many rows should be there in the expected dataframe?\n",
+    "\n",
+    "* 1\n",
+    "* 2\n",
+    "* 3\n",
+    "* 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fode for batch.py\n",
+    "```python\n",
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
+    "import warnings\n",
+    "import sys\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import click\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module='sklearn')\n",
+    "\n",
+    "\n",
+    "def generate_output_file_path(year, month):\n",
+    " return f'./output/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "\n",
+    "\n",
+    "def prepare_data(df, categorical):\n",
+    "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "    df['duration'] = df.duration.dt.total_seconds() / 60\n",
+    "    df = df[(df.duration >= 1) & (df.duration <= 60)].copy()\n",
+    "\n",
+    "    df[categorical] = df[categorical].fillna(-1).astype('int').astype('str')\n",
+    "    return df, categorical\n",
+    "\n",
+    "\n",
+    "def read_data(filename, categorical):\n",
+    "    df = pd.read_parquet(filename)\n",
+    "    return prepare_data(df, categorical)\n",
+    "\n",
+    "\n",
+    "@click.command()\n",
+    "@click.option(\n",
+    "    '--year',\n",
+    "    type=int,\n",
+    "    required=True,\n",
+    "    help='Year of the trip data'\n",
+    ")\n",
+    "@click.option(\n",
+    "    '--month',\n",
+    "    type=int,\n",
+    "    required=True,\n",
+    "    help='Month of the trip data'\n",
+    ")\n",
+    "def main(year, month):\n",
+    "    with open('./description_homework/model.bin', 'rb') as f_in:\n",
+    "        dv, lr = pickle.load(f_in)\n",
+    "\n",
+    "    input_file = f'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "    df, categorical = read_data(input_file, categorical = ['PULocationID', 'DOLocationID'])\n",
+    "\n",
+    "    df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')\n",
+    "\n",
+    "    dicts = df[categorical].to_dict(orient='records')\n",
+    "    X_val = dv.transform(dicts)\n",
+    "    y_pred = lr.predict(X_val)\n",
+    "\n",
+    "    print('predicted mean duration:', y_pred.mean())\n",
+    "\n",
+    "    df_result = pd.DataFrame()\n",
+    "    df_result['ride_id'] = df['ride_id']\n",
+    "    df_result['predicted_duration'] = y_pred\n",
+    "\n",
+    "    output_file = generate_output_file_path(year, month)\n",
+    "    df_result.to_parquet(output_file, engine='pyarrow', index=False)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted mean duration: 14.292282936862449\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check after changing\n",
+    "! python batch.py --year 2023 --month 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "code for test_batch\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import numpy as np\n",
+    "\n",
+    "from batch import prepare_data\n",
+    "\n",
+    "\n",
+    "def dt(hour, minute, second=0):\n",
+    "    return datetime(2023, 1, 1, hour, minute, second)\n",
+    "\n",
+    "\n",
+    "def prepare_test_data():\n",
+    "    data = [\n",
+    "    (None, None, dt(1, 1), dt(1, 10)),\n",
+    "    (1, 1, dt(1, 2), dt(1, 10)),\n",
+    "    (1, None, dt(1, 2, 0), dt(1, 2, 59)),\n",
+    "    (3, 4, dt(1, 2, 0), dt(2, 2, 1))\n",
+    "    ]\n",
+    "\n",
+    "    columns_test_df = ['PULocationID', 'DOLocationID', 'tpep_pickup_datetime', 'tpep_dropoff_datetime']\n",
+    "    test_df = pd.DataFrame(data, columns=columns_test_df)\n",
+    "\n",
+    "    categorical = ['PULocationID', 'DOLocationID']\n",
+    "\n",
+    "    prepared_test_df, categorical = prepare_data(test_df, categorical)\n",
+    "    print(prepared_test_df)\n",
+    "\n",
+    "    expected_prepared_test_df = [\n",
+    "        ('-1', '-1', 9.),\n",
+    "        ('1', '1', 8.),\n",
+    "    ]\n",
+    "    columns_expected_df = ['PULocationID', 'DOLocationID', 'duration']\n",
+    "    expected_prepared_test_df = pd.DataFrame(expected_prepared_test_df, columns=columns_expected_df)\n",
+    "\n",
+    "    catigorial_cols = ['PULocationID', 'DOLocationID']\n",
+    "    for col in catigorial_cols:\n",
+    "        assert (prepared_test_df[col] == expected_prepared_test_df[col]).all()\n",
+    "\n",
+    "    float_cols = ['duration']\n",
+    "    epsilon = 1e-9\n",
+    "    for col in float_cols:\n",
+    "        np.allclose(prepared_test_df[col], expected_prepared_test_df[col], atol=epsilon)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests.test_batch import prepare_test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PULocationID DOLocationID tpep_pickup_datetime tpep_dropoff_datetime  \\\n",
+      "0           -1           -1  2023-01-01 01:01:00   2023-01-01 01:10:00   \n",
+      "1            1            1  2023-01-01 01:02:00   2023-01-01 01:10:00   \n",
+      "\n",
+      "   duration  \n",
+      "0       9.0  \n",
+      "1       8.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "prepare_test_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q3:==*** 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4. Mocking S3 with Localstack \n",
+    "\n",
+    "Now let's prepare for an integration test. In our script, we \n",
+    "write data to S3. So we'll use Localstack to mimic S3.\n",
+    "\n",
+    "First, let's run Localstack with Docker compose. Let's create a \n",
+    "`docker-compose.yaml` file with just one service: localstack. Inside\n",
+    "localstack, we're only interested in running S3. \n",
+    "\n",
+    "Start the service and test it by creating a bucket where we'll\n",
+    "keep the output. Let's call it \"nyc-duration\".\n",
+    "\n",
+    "With AWS CLI, this is how we create a bucket:\n",
+    "\n",
+    "```bash\n",
+    "aws s3 mb s3://nyc-duration\n",
+    "```\n",
+    "\n",
+    "Then we need to check that the bucket was successfully created. With AWS, this is how we typically do it:\n",
+    "\n",
+    "```bash\n",
+    "aws s3 ls\n",
+    "```\n",
+    "\n",
+    "In both cases we should adjust commands for localstack. What option do we need to use for such purposes?\n",
+    "\n",
+    "* `--backend-store-uri`\n",
+    "* `--profile`\n",
+    "* `--endpoint-url`\n",
+    "* `--version`\n",
+    "\n",
+    "\n",
+    "## Make input and output paths configurable\n",
+    "\n",
+    "Right now the input and output paths are hardcoded, but we want\n",
+    "to change it for the tests. \n",
+    "\n",
+    "One of the possible ways would be to specify `INPUT_FILE_PATTERN` and `OUTPUT_FILE_PATTERN` via the env \n",
+    "variables. Let's do that:\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "export INPUT_FILE_PATTERN=\"s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\"\n",
+    "export OUTPUT_FILE_PATTERN=\"s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\"\n",
+    "```\n",
+    "\n",
+    "And this is how we can read them:\n",
+    "\n",
+    "```python\n",
+    "def get_input_path(year, month):\n",
+    "    default_input_pattern = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "    input_pattern = os.getenv('INPUT_FILE_PATTERN', default_input_pattern)\n",
+    "    return input_pattern.format(year=year, month=month)\n",
+    "\n",
+    "\n",
+    "def get_output_path(year, month):\n",
+    "    default_output_pattern = 's3://nyc-duration-prediction-alexey/taxi_type=fhv/year={year:04d}/month={month:02d}/predictions.parquet'\n",
+    "    output_pattern = os.getenv('OUTPUT_FILE_PATTERN', default_output_pattern)\n",
+    "    return output_pattern.format(year=year, month=month)\n",
+    "\n",
+    "\n",
+    "def main(year, month):\n",
+    "    input_file = get_input_path(year, month)\n",
+    "    output_file = get_output_path(year, month)\n",
+    "    # rest of the main function ... \n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Reading from Localstack S3 with Pandas\n",
+    "\n",
+    "So far we've been reading parquet files from S3 with using\n",
+    "pandas `read_parquet`. But this way we read it from the\n",
+    "actual S3 service. Now we need to replace it with our localstack\n",
+    "one.\n",
+    "\n",
+    "For that, we need to specify the endpoint url:\n",
+    "\n",
+    "```python\n",
+    "options = {\n",
+    "    'client_kwargs': {\n",
+    "        'endpoint_url': S3_ENDPOINT_URL\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "df = pd.read_parquet('s3://bucket/file.parquet', storage_options=options)\n",
+    "```\n",
+    "\n",
+    "Let's modify our `read_data` function:\n",
+    "\n",
+    "- check if `S3_ENDPOINT_URL` is set, and if it is, use it for reading\n",
+    "- otherwise use the usual way"
    ]
   },
   {
@@ -249,6 +630,20 @@
    "metadata": {},
    "source": [
     "## ***Answer for Q4:==*** `project_folder/dashboards`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q5:==*** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q6:==*** "
    ]
   }
  ],
