--- a/06-best-practices/hw06.ipynb
+++ b/06-best-practices/hw06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,21 +500,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  PULocationID DOLocationID tpep_pickup_datetime tpep_dropoff_datetime  \\\n",
-      "0           -1           -1  2023-01-01 01:01:00   2023-01-01 01:10:00   \n",
-      "1            1            1  2023-01-01 01:02:00   2023-01-01 01:10:00   \n",
-      "\n",
-      "   duration  \n",
-      "0       9.0  \n",
-      "1       8.0  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PULocationID DOLocationID  duration\n",
+       "0           -1           -1       9.0\n",
+       "1            1            1       8.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -626,11 +665,351 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch docker-compose.yaml"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***Answer for Q4:==*** `project_folder/dashboards`"
+    "docker-compose.yaml\n",
+    "\n",
+    "```\n",
+    "services:\n",
+    "  localstack:\n",
+    "    image: localstack/localstack\n",
+    "    container_name: localstack\n",
+    "    ports:\n",
+    "      - \"4566:4566\"\n",
+    "    environment:\n",
+    "      - SERVICES=s3\n",
+    "      - DEBUG=1\n",
+    "      - AWS_ACCESS_KEY_ID=dummyAccessKeyId\n",
+    "      - AWS_SECRET_ACCESS_KEY=dummySecretAccessKey\n",
+    "      - DEFAULT_REGION=us-east-1\n",
+    "    volumes:\n",
+    "      - \"./localstack:/var/lib/localstack\"\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! (cd description_homework && cp Dockerfile model.bin Pipfile Pipfile.lock ..)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! mkdir -p localstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p ~/.aws"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~/.aws/credentials\n",
+    "```\n",
+    "[default]\n",
+    "aws_access_key_id = dummyAccessKeyId\n",
+    "aws_secret_access_key = dummySecretAccessKey\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~/.aws/config\n",
+    "```\n",
+    "[default]\n",
+    "region = us-east-1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aws-cli/1.18.69 Python/3.8.10 Linux/5.15.0-113-generic botocore/1.16.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "!aws --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make_bucket: nyc-duration\n"
+     ]
+    }
+   ],
+   "source": [
+    "!aws --endpoint-url=http://localhost:4566 s3 mb s3://nyc-duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "year, month =  2023, 4\n",
+    "\n",
+    "input_file = f'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "df = pd.read_parquet(input_file)\n",
+    "\n",
+    "\n",
+    "s3_endpoint_url=\"http://localhost:4566\"\n",
+    "input_file=f\"s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\"\n",
+    "\n",
+    "storage_options = {'client_kwargs': {'endpoint_url': s3_endpoint_url}}\n",
+    "df.to_parquet(input_file, engine='pyarrow', index=False, storage_options=storage_options)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "code for batch.py\n",
+    "\n",
+    "```python\n",
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
+    "import warnings\n",
+    "import sys\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import click\n",
+    "import os\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module='sklearn')\n",
+    "\n",
+    "\n",
+    "def get_input_path(year, month):\n",
+    "    default_input_pattern = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "    input_pattern = os.getenv('INPUT_FILE_PATTERN', default_input_pattern)\n",
+    "    return input_pattern.format(year=year, month=month)\n",
+    "\n",
+    "def get_output_path(year, month):\n",
+    "    default_output_pattern = './output/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "    output_pattern = os.getenv('OUTPUT_FILE_PATTERN', default_output_pattern)\n",
+    "    return output_pattern.format(year=year, month=month)\n",
+    "\n",
+    "def prepare_data(df, categorical):\n",
+    "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "    df['duration'] = df.duration.dt.total_seconds() / 60\n",
+    "    df = df[(df.duration >= 1) & (df.duration <= 60)].copy()\n",
+    "\n",
+    "    df[categorical] = df[categorical].fillna(-1).astype('int').astype('str')\n",
+    "    return df, categorical\n",
+    "\n",
+    "def read_data(year, month, categorical):\n",
+    "    options = {}\n",
+    "    s3_endpoint_url = os.getenv('S3_ENDPOINT_URL')\n",
+    "    input_pattern = os.getenv('INPUT_FILE_PATTERN')\n",
+    "    input_file = get_input_path(year, month)\n",
+    "\n",
+    "    if s3_endpoint_url and input_pattern:\n",
+    "        options['storage_options'] = {'client_kwargs': {'endpoint_url': s3_endpoint_url}}\n",
+    "        df = pd.read_parquet(input_file, storage_options=options['storage_options'])\n",
+    "        print(f'Data loaded from S3, INPUT_FILE_PATTERN is {input_pattern}')\n",
+    "    else:\n",
+    "        print('else')\n",
+    "        df = pd.read_parquet(input_file)\n",
+    "        print(f'Data loaded from the internet, INPUT_FILE_PATTERN is {input_pattern}')\n",
+    "    return prepare_data(df, categorical)\n",
+    "\n",
+    "def save_parquet_to_s3(output_file, df):\n",
+    "    s3_endpoint_url = os.getenv('S3_ENDPOINT_URL')\n",
+    "    output_pattern = os.getenv('OUTPUT_FILE_PATTERN')\n",
+    "    options = {}\n",
+    "    if s3_endpoint_url and output_pattern:\n",
+    "        options['storage_options'] = {'client_kwargs': {'endpoint_url': s3_endpoint_url}}\n",
+    "        df.to_parquet(output_file, engine='pyarrow', index=False, storage_options=options['storage_options'])\n",
+    "        print(f'File saved to S3, OUTPUT_FILE_PATTERN is {output_pattern}')\n",
+    "    else:\n",
+    "        df.to_parquet(output_file, engine='pyarrow', index=False)\n",
+    "        print(f'File saved locally, OUTPUT_FILE_PATTERN is {output_pattern}')\n",
+    "\n",
+    "\n",
+    "@click.command()\n",
+    "@click.option(\n",
+    "    '--year',\n",
+    "    type=int,\n",
+    "    required=True,\n",
+    "    help='Year of the trip data'\n",
+    ")\n",
+    "@click.option(\n",
+    "    '--month',\n",
+    "    type=int,\n",
+    "    required=True,\n",
+    "    help='Month of the trip data'\n",
+    ")\n",
+    "def main(year, month):\n",
+    "    with open('./model.bin', 'rb') as f_in:\n",
+    "        dv, lr = pickle.load(f_in)\n",
+    "\n",
+    "    df, categorical = read_data(year, month, categorical = ['PULocationID', 'DOLocationID'])\n",
+    "\n",
+    "    df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')\n",
+    "\n",
+    "    dicts = df[categorical].to_dict(orient='records')\n",
+    "    X_val = dv.transform(dicts)\n",
+    "    y_pred = lr.predict(X_val)\n",
+    "\n",
+    "    print('predicted mean duration:', y_pred.mean())\n",
+    "\n",
+    "    df_result = pd.DataFrame()\n",
+    "    df_result['ride_id'] = df['ride_id']\n",
+    "    df_result['predicted_duration'] = y_pred\n",
+    "\n",
+    "    output_file = get_output_path(year, month)\n",
+    "    save_parquet_to_s3(output_file, df_result)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch run_batch_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run_batch_py_local.sh\n",
+    "```\n",
+    "#!/bin/bash\n",
+    "\n",
+    "# Set environment variables\n",
+    "export INPUT_FILE_PATTERN=\"s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\"\n",
+    "export OUTPUT_FILE_PATTERN=\"s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\"\n",
+    "export S3_ENDPOINT_URL=\"http://localhost:4566\"\n",
+    "\n",
+    "# Run the Python script with parameters\n",
+    "python batch.py --year 2023 --month 4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! chmod +x run_batch_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded from S3, INPUT_FILE_PATTERN is s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\n",
+      "predicted mean duration: 14.292282936862449\n",
+      "File saved to S3, OUTPUT_FILE_PATTERN is s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ./run_batch_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! docker build -t my_hw6_image ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded from S3, INPUT_FILE_PATTERN is s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\n",
+      "predicted mean duration: 14.292282936862449\n",
+      "File saved to S3, OUTPUT_FILE_PATTERN is s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "! docker run --network host -it \\\n",
+    "                --env INPUT_FILE_PATTERN=\"s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\" \\\n",
+    "                --env OUTPUT_FILE_PATTERN=\"s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\" \\\n",
+    "                --env S3_ENDPOINT_URL=\"http://localhost:4566\" \\\n",
+    "                my_hw6_image --year 2023 --month 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q4:==*** ```--endpoint-url```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
